Fix icon alignment in accordion title

--- a/components/accordion-item/index.scss
+++ b/components/accordion-item/index.scss
@@ -53,6 +53,7 @@
     @extend .rvo-layout-align-items-start;
     @extend .rvo-layout-gap--sm;
 
+    align-items: flex-start;
     margin-block-end: 0;
     margin-block-start: 0;
   }
